fixes unreadable shield text

--- a/static/css/shield.css
+++ b/static/css/shield.css
@@ -67,9 +67,15 @@
   margin-right: -2px;
 }
 #banners > div > div > p.foot {
-  color: white;
   font-size: 80%;
-  margin: 0px;
+  margin-top: 5px;
+}
+
+#banners > div > div > p.foot > span {
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 10px;
+  padding: 2px 6px;
+  color: #444;
 }
 
 /* Tab portion under banners */
